# TCW

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tcw-config.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
commands/: tcw-audit-work-backlog.md  tcw-capabilities-init.md  tcw-consolidate-plans.md  tcw-doctor.md  tcw-drive-work-to-completion.md  tcw-init.md  tcw-plan-work.md  tcw-taxonomy-init.md
docs/: DESIGN-HISTORY.md  PLAN.md  migration-guide-0.10.X-to-0.11.0.md  migration-guide-0.12.X-to-0.13.0.md  migration-guide-0.12.X-to-1.0.0.md  work-inbox-template.md
docs/capabilities/: web.md
docs/changelogs/: upcoming.md  v0.0.2.md  v0.1.0.md  v0.1.1.md  v0.10.1.md  v0.10.2.md  v0.10.3.md  v0.11.0.md  v0.11.1.md  v0.11.4.md  v0.11.5.md  v0.13.1.md  v0.13.3.md  v0.13.4.md  v0.14.0.md  v0.14.1.md  v0.2.0.md  v0.2.2.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.5.1.md  v0.6.1.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.8.0.md
scripts/: build_web.mjs  check_web_build.mjs  cut_version.py  migrate_capabilities_to_folders.py
tcw/: cli.py  refs.py  validate.py
tests/: test_capabilities.py  test_capabilities_federation.py  test_capabilities_reset.py  test_capabilities_sidecar.py  test_cut_version.py  test_environment_hardness.py  test_epic_completable.py  test_multiproject.py  test_plugin_manifests.py  test_project_registry.py  test_qualified_ref.py  test_recursion.py  test_refs.py  test_serve.py  test_serve_descendants.py  test_serve_resolve.py  test_serve_runtime.py  test_serve_write.py  test_skill_flow.py  test_smoke.py  test_store_editor.py  test_store_nodes.py  test_taxonomy.py  test_tree_js.py  test_validate.py  test_validate_target.py  test_work.py  test_work_tags.py  tree.test.mjs
(+730 files in other folders)
