[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tcw"
version = "0.3.2"
description = "Taxonomy · Capabilities · Work — a storage-abstracted framework for describing and evolving a software project."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["PyYAML>=6"]

[project.scripts]
tcw = "tcw.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["tcw*"]
exclude = ["plugins*"]

[tool.pytest.ini_options]
# `plugins/tcw` is a symlink back to the repo root (the Codex marketplace pointer);
# without these, collection recurses through it infinitely.
testpaths = ["tests"]
norecursedirs = ["plugins", ".venv", "build", "dist", "*.egg-info"]
